--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -32,5 +32,11 @@
   "select_all_confirm": "Sélectionner tous les pictos visibles ?",
   "clear_selection_confirm": "Effacer la sélection des pictos visibles ?",
   "hidden": "masqués",
-  "pictos_title": "Clair Obscur - Pictos"
+  "pictos_title": "Clair Obscur - Pictos",
+  "nav_weapons": "Inventaire des armes",
+  "heading_weapons": "Inventaire des armes",
+  "damage_type": "Type de dégâts",
+  "damage_buff": "Bonus",
+  "weapon_effect": "Effet",
+  "weapons_title": "Clair Obscur - Armes"
 }
