Normalize defense bonus names

--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -13,9 +13,11 @@
   "grid_view": "Vue grille",
   "table_view": "Vue tableau",
   "search_placeholder": "Rechercher un picto...",
-  "defence": "Défense",
+  "defense": "Défense",
   "speed": "Vitesse",
+  "vitality": "Vitalité",
   "critical-luck": "Ch. Critique",
+  "luck": "Chance",
   "health": "Vie",
   "name": "Nom",
   "region": "Région",
