--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -13,9 +13,11 @@
   "grid_view": "Grid view",
   "table_view": "Table view",
   "search_placeholder": "Search pictos by any field...",
-  "defence": "Defence",
+  "defense": "Defense",
   "speed": "Speed",
+  "vitality": "Vitality",
   "critical-luck": "Crit. Luck",
+  "luck": "Luck",
   "health": "Health",
   "name": "Name",
   "region": "Region",
