Enhance index layout with images

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -42,6 +42,6 @@
   "weapon_effect": "Effect",
   "weapons_title": "Clair Obscur - Weapons",
   "heading_home": "Welcome",
-  "index_desc1": "Manage your Clair Obscur picto collection. Mark the pictos you own, search through the list and save your progress.",
-  "index_desc2": "The weapons inventory lets you track every weapon as well. More features are coming, such as a build maker."
+  "index_desc1": "Browse the full list of pictos and mark those you own. Filter by region or effect to organize your collection and save your progress.",
+  "index_desc2": "Track your entire arsenal. Each weapon sheet shows who can wield it and the effects it grants so you never miss a piece of equipment."
 }
