--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -42,6 +42,6 @@
   "weapon_effect": "Effet",
   "weapons_title": "Clair Obscur - Armes",
   "heading_home": "Bienvenue",
-  "index_desc1": "Gérez votre collection de pictos Clair Obscur. Indiquez ceux que vous possédez, effectuez des recherches et sauvegardez votre progression.",
-  "index_desc2": "La section armes vous permet aussi de suivre votre arsenal. De nouvelles fonctionnalités arriveront, comme un build maker."
+  "index_desc1": "Parcourez la liste complète des pictos et indiquez ceux que vous possédez. Filtrez par région ou par effet pour organiser votre collection et sauvegarder votre progression.",
+  "index_desc2": "Suivez l'intégralité de votre arsenal. Chaque fiche d'arme précise qui peut l'utiliser et quels effets elle apporte afin de ne rien manquer."
 }
