Add team builder page

--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -36,7 +36,10 @@
   "hidden": "masqués",
   "pictos_title": "Clair Obscur - Pictos",
   "nav_weapons": "Inventaire des armes",
+  "nav_build": "Créateur d'équipe",
   "heading_weapons": "Inventaire des armes",
+  "heading_build": "Création d'équipe",
+  "build_title": "Clair Obscur - Création d'équipe",
   "damage_type": "Type de dégâts",
   "damage_buff": "Bonus",
   "weapon_effect": "Effet",
