--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -41,6 +41,9 @@
   "damage_buff": "Damage buff",
   "weapon_effect": "Effect",
   "weapons_title": "Clair Obscur - Weapons",
+  "nav_build": "Team builder",
+  "heading_build": "Team builder",
+  "build_title": "Clair Obscur - Team builder",
   "heading_home": "Welcome",
   "index_desc1": "Browse the full list of pictos and mark those you own. Filter by region or effect to organize your collection and save your progress.",
   "index_desc2": "Track your entire arsenal. Each weapon sheet shows who can wield it and the effects it grants so you never miss a piece of equipment."
