Refine team builder interactions

--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -40,6 +40,10 @@
   "heading_weapons": "Inventaire des armes",
   "heading_build": "Création d'équipe",
   "build_title": "Clair Obscur - Création d'équipe",
+  "choose_character": "Choisir le personnage",
+  "choose_weapon": "Choisir son arme",
+  "choose_picto": "Choisir picto {num}",
+  "choose_luminas": "Choisir les luminas",
   "damage_type": "Type de dégâts",
   "damage_buff": "Bonus",
   "weapon_effect": "Effet",
