Add shareable team link

--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -44,6 +44,8 @@
   "choose_weapon": "Choisir son arme",
   "choose_picto": "Choisir picto {num}",
   "choose_luminas": "Choisir les luminas",
+  "share": "Partager",
+  "link_copied": "Lien copié !",
   "damage_type": "Type de dégâts",
   "damage_buff": "Bonus",
   "weapon_effect": "Effet",
