Add team titles and translations

--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -46,6 +46,8 @@
   "choose_luminas": "Choisir les luminas",
   "share": "Partager",
   "link_copied": "Lien copié !",
+  "main_team": "Équipe principale",
+  "secondary_team": "Équipe secondaire",
   "damage_type": "Type de dégâts",
   "damage_buff": "Bonus",
   "weapon_effect": "Effet",
