--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -50,6 +50,8 @@
   "choose_luminas": "Choose luminas",
   "share": "Share",
   "link_copied": "Link copied!",
+  "main_team": "Main team",
+  "secondary_team": "Secondary team",
   "heading_home": "Welcome",
   "index_desc1": "Browse the full list of pictos and mark those you own. Filter by region or effect to organize your collection and save your progress.",
   "index_desc2": "Track your entire arsenal. Each weapon sheet shows who can wield it and the effects it grants so you never miss a piece of equipment."
