--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -48,6 +48,7 @@
   "link_copied": "Lien copié !",
   "main_team": "Équipe principale",
   "secondary_team": "Équipe secondaire",
+  "no_weapon": "Aucune arme",
   "damage_type": "Type de dégâts",
   "damage_buff": "Bonus",
   "weapon_effect": "Effet",
