Add lumina search and responsive modal layout

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -50,6 +50,7 @@
   "choose_luminas": "Choose luminas",
   "share": "Share",
   "link_copied": "Link copied!",
+  "filter_placeholder": "Filter...",
   "main_team": "Main team",
   "secondary_team": "Secondary team",
   "no_weapon": "No weapon",
