--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -46,6 +46,7 @@
   "choose_luminas": "Choisir les luminas",
   "share": "Partager",
   "link_copied": "Lien copié !",
+  "filter_placeholder": "Filtrer...",
   "main_team": "Équipe principale",
   "secondary_team": "Équipe secondaire",
   "no_weapon": "Aucune arme",
