Update lumina selection trigger

--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -44,6 +44,7 @@
   "choose_weapon": "Choisir son arme",
   "choose_picto": "Choisir picto {num}",
   "choose_luminas": "Choisir les luminas",
+  "luminas_label": "Luminas",
   "share": "Partager",
   "link_copied": "Lien copié !",
   "filter_placeholder": "Filtrer...",
