--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -48,6 +48,7 @@
   "choose_weapon": "Choose weapon",
   "choose_picto": "Choose picto {num}",
   "choose_luminas": "Choose luminas",
+  "luminas_label": "Luminas",
   "share": "Share",
   "link_copied": "Link copied!",
   "filter_placeholder": "Filter...",
