--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -57,5 +57,7 @@
   "weapons_title": "Clair Obscur - Armes",
   "heading_home": "Bienvenue",
   "index_desc1": "Parcourez la liste complète des pictos et indiquez ceux que vous possédez. Filtrez par région ou par effet pour organiser votre collection et sauvegarder votre progression.",
-  "index_desc2": "Suivez l'intégralité de votre arsenal. Chaque fiche d'arme précise qui peut l'utiliser et quels effets elle apporte afin de ne rien manquer."
+  "index_desc2": "Suivez l'intégralité de votre arsenal. Chaque fiche d'arme précise qui peut l'utiliser et quels effets elle apporte afin de ne rien manquer.",
+  "login": "Connexion",
+  "logout": "Déconnexion"
 }
