feat(build): show total lumina cost

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -49,6 +49,7 @@
   "choose_picto": "Choose picto {num}",
   "choose_luminas": "Choose luminas",
   "luminas_label": "Luminas",
+  "lumina_total": "Total",
   "share": "Share",
   "link_copied": "Link copied!",
   "filter_placeholder": "Filter...",
