--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -45,6 +45,7 @@
   "choose_picto": "Choisir picto {num}",
   "choose_luminas": "Choisir les luminas",
   "luminas_label": "Luminas",
+  "lumina_total": "Total",
   "share": "Partager",
   "link_copied": "Lien copié !",
   "filter_placeholder": "Filtrer...",
