--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -64,7 +64,11 @@
   "index_desc3": "Créez votre composition d'équipe et partagez-la via un lien.",
   "nav_admin": "Admin",
   "heading_admin": "Administration",
-  "admin_base": "Gérer les données de base",
+  "admin_characters": "Personnages",
+  "admin_damage_buff_types": "Types d'amélioration de dégâts",
+  "admin_damage_types": "Types de dégâts",
   "admin_pictos": "Pictos",
-  "admin_weapons": "Armes"
+  "admin_weapons": "Armes",
+  "admin_capacity_types": "Types de capacités",
+  "admin_capacities": "Capacités"
 }
