Add changeBuffStat handler

--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -54,6 +54,11 @@
   "no_weapon": "Aucune arme",
   "damage_type": "Type de dégâts",
   "damage_buff": "Bonus",
+  "damage_buff_type_1": "Vitalité",
+  "damage_buff_type_2": "Force",
+  "damage_buff_type_3": "Agilité",
+  "damage_buff_type_4": "Défense",
+  "damage_buff_type_5": "Chance de critique",
   "weapon_effect": "Effet",
   "weapons_title": "Clair Obscur - Armes",
   "heading_home": "Bienvenue",
