--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -59,6 +59,7 @@
   "damage_buff_type_3": "Agilité",
   "damage_buff_type_4": "Défense",
   "damage_buff_type_5": "Chance de critique",
+  "attributes": "Attributs",
   "weapon_effect": "Effet",
   "weapons_title": "Clair Obscur - Armes",
   "heading_home": "Bienvenue",
