Add outfit admin tables

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -74,6 +74,7 @@
   "admin_characters": "Characters",
   "admin_damage_buff_types": "Damage Buff Types",
   "admin_damage_types": "Damage Types",
+  "admin_outfits": "Outfits",
   "admin_pictos": "Pictos",
   "admin_weapons": "Weapons",
   "admin_capacity_types": "Capacity Types",
