--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -74,6 +74,7 @@
   "admin_characters": "Personnages",
   "admin_damage_buff_types": "Types d'amélioration de dégâts",
   "admin_damage_types": "Types de dégâts",
+  "admin_outfits": "Tenues",
   "admin_pictos": "Pictos",
   "admin_weapons": "Armes",
   "admin_capacity_types": "Types de capacités",
