Add outfit inventory section

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -36,7 +36,9 @@
   "hidden": "hidden",
   "pictos_title": "Clair Obscur - Pictos",
   "nav_weapons": "Weapons inventory",
+  "nav_outfits": "Outfits inventory",
   "heading_weapons": "Weapons inventory",
+  "heading_outfits": "Outfits inventory",
   "damage_type": "Damage type",
   "damage_buff": "Damage buff",
   "damage_buff_type_1": "Vitality",
@@ -47,6 +49,7 @@
   "attributes": "Attributes",
   "weapon_effect": "Effect",
   "weapons_title": "Clair Obscur - Weapons",
+  "outfits_title": "Clair Obscur - Outfits",
   "nav_build": "Team builder",
   "heading_build": "Team builder",
   "build_title": "Clair Obscur - Team builder",
@@ -66,9 +69,10 @@
   "heading_home": "Welcome",
   "index_desc1": "Browse the full list of pictos and mark those you own. Filter by region or effect to organize your collection and save your progress.",
   "index_desc2": "Track your entire arsenal. Each weapon sheet shows who can wield it and the effects it grants so you never miss a piece of equipment.",
+  "index_desc3": "Customize your look by keeping track of all unlocked outfits.",
   "login": "Login",
   "logout": "Logout",
-  "index_desc3": "Build your team composition and share it with a link.",
+  "index_desc4": "Build your team composition and share it with a link.",
   "nav_admin": "Admin",
   "heading_admin": "Administration",
   "admin_characters": "Characters",
