--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -36,8 +36,10 @@
   "hidden": "masqués",
   "pictos_title": "Clair Obscur - Pictos",
   "nav_weapons": "Inventaire des armes",
+  "nav_outfits": "Inventaire des tenues",
   "nav_build": "Créateur d'équipe",
   "heading_weapons": "Inventaire des armes",
+  "heading_outfits": "Inventaire des tenues",
   "heading_build": "Création d'équipe",
   "build_title": "Clair Obscur - Création d'équipe",
   "choose_character": "Choisir le personnage",
@@ -63,12 +65,14 @@
   "attributes": "Attributs",
   "weapon_effect": "Effet",
   "weapons_title": "Clair Obscur - Armes",
+  "outfits_title": "Clair Obscur - Tenues",
   "heading_home": "Bienvenue",
   "index_desc1": "Parcourez la liste complète des pictos et indiquez ceux que vous possédez. Filtrez par région ou par effet pour organiser votre collection et sauvegarder votre progression.",
   "index_desc2": "Suivez l'intégralité de votre arsenal. Chaque fiche d'arme précise qui peut l'utiliser et quels effets elle apporte afin de ne rien manquer.",
+  "index_desc3": "Personnalisez votre apparence en suivant toutes les tenues débloquées.",
   "login": "Connexion",
   "logout": "Déconnexion",
-  "index_desc3": "Créez votre composition d'équipe et partagez-la via un lien.",
+  "index_desc4": "Créez votre composition d'équipe et partagez-la via un lien.",
   "nav_admin": "Admin",
   "heading_admin": "Administration",
   "admin_characters": "Personnages",
