Separate skins and haircuts

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -50,6 +50,8 @@
   "weapon_effect": "Effect",
   "weapons_title": "Clair Obscur - Weapons",
   "outfits_title": "Clair Obscur - Outfits",
+  "skins_label": "Skins:",
+  "haircuts_label": "Haircuts:",
   "nav_build": "Team builder",
   "heading_build": "Team builder",
   "build_title": "Clair Obscur - Team builder",
