--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -66,6 +66,8 @@
   "weapon_effect": "Effet",
   "weapons_title": "Clair Obscur - Armes",
   "outfits_title": "Clair Obscur - Tenues",
+  "skins_label": "Skins :",
+  "haircuts_label": "Coiffures :",
   "heading_home": "Bienvenue",
   "index_desc1": "Parcourez la liste complète des pictos et indiquez ceux que vous possédez. Filtrez par région ou par effet pour organiser votre collection et sauvegarder votre progression.",
   "index_desc2": "Suivez l'intégralité de votre arsenal. Chaque fiche d'arme précise qui peut l'utiliser et quels effets elle apporte afin de ne rien manquer.",
