Améliore team builder

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -84,5 +84,7 @@
   "admin_pictos": "Pictos",
   "admin_weapons": "Weapons",
   "admin_capacity_types": "Capacity Types",
-  "admin_capacities": "Capacities"
+  "admin_capacities": "Capacities",
+  "config_capacities": "Configure capacities",
+  "edit": "Edit"
 }
