--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -86,5 +86,6 @@
   "admin_capacity_types": "Types de capacités",
   "admin_capacities": "Capacités",
   "config_capacities": "Configurer les capacités",
-  "edit": "Éditer"
+  "edit": "Éditer",
+  "show_labels": "Afficher les libellés"
 }
