--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -87,5 +87,5 @@
   "admin_capacities": "Capacités",
   "config_capacities": "Configurer les capacités",
   "edit": "Éditer",
-  "show_labels": "Afficher les libellés"
+  "show_labels": "i18n"
 }
