--- a/src/lang/pl.json
+++ b/src/lang/pl.json
@@ -87,5 +87,5 @@
   "admin_capacities": "Zdolności",
   "config_capacities": "Skonfiguruj zdolności",
   "edit": "Redagować",
-  "show_labels": "Pokaż etykiety"
+  "show_labels": "i18n"
 }
