--- a/src/lang/it.json
+++ b/src/lang/it.json
@@ -87,5 +87,5 @@
   "admin_capacities": "Capacities",
   "config_capacities": "Configure capacities",
   "edit": "Edit",
-  "show_labels": "Show labels"
+  "show_labels": "i18n"
 }
