chore: update missing translations

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -15,9 +15,9 @@
   "search_placeholder": "Pictos durchsuchen...",
   "defense": "Verteidigung",
   "speed": "Geschwindigkeit",
-  "vitality": "Vitality",
+  "vitality": "Vitalität",
   "critical-luck": "Krit. Glück",
-  "luck": "Luck",
+  "luck": "Glück",
   "health": "Leben",
   "name": "Name",
   "region": "Region",
@@ -35,57 +35,57 @@
   "clear_selection_confirm": "Auswahl der sichtbaren Pictos löschen?",
   "hidden": "versteckt",
   "pictos_title": "Clair Obscur - Pictos",
-  "nav_weapons": "Weapons inventory",
-  "nav_outfits": "Outfits inventory",
-  "heading_weapons": "Weapons inventory",
-  "heading_outfits": "Outfits inventory",
-  "damage_type": "Damage type",
-  "damage_buff": "Damage buff",
-  "damage_buff_type_1": "Vitality",
-  "damage_buff_type_2": "Strength",
-  "damage_buff_type_3": "Agility",
-  "damage_buff_type_4": "Defense",
-  "damage_buff_type_5": "Critical Chance",
-  "attributes": "Attributes",
-  "weapon_effect": "Effect",
-  "weapons_title": "Clair Obscur - Weapons",
-  "outfits_title": "Clair Obscur - Outfits",
+  "nav_weapons": "Waffeninventar",
+  "nav_outfits": "Outfit-Inventar",
+  "heading_weapons": "Waffeninventar",
+  "heading_outfits": "Outfit-Inventar",
+  "damage_type": "Schadensart",
+  "damage_buff": "Schadensbonus",
+  "damage_buff_type_1": "Vitalität",
+  "damage_buff_type_2": "Stärke",
+  "damage_buff_type_3": "Beweglichkeit",
+  "damage_buff_type_4": "Verteidigung",
+  "damage_buff_type_5": "Kritische Chance",
+  "attributes": "Attribute",
+  "weapon_effect": "Effekt",
+  "weapons_title": "Clair Obscur - Waffen",
+  "outfits_title": "Clair Obscur - Kleidung",
   "skins_label": "Skins:",
-  "haircuts_label": "Haircuts:",
-  "nav_build": "Team builder",
-  "heading_build": "Team builder",
-  "build_title": "Clair Obscur - Team builder",
-  "choose_character": "Choose character",
-  "choose_weapon": "Choose weapon",
-  "select_character_first": "Select a character before choosing a weapon",
-  "choose_picto": "Choose picto {num}",
-  "choose_luminas": "Choose luminas",
+  "haircuts_label": "Frisuren:",
+  "nav_build": "Teamplaner",
+  "heading_build": "Teamplaner",
+  "build_title": "Clair Obscur - Teamplaner",
+  "choose_character": "Charakter wählen",
+  "choose_weapon": "Waffe wählen",
+  "select_character_first": "Wähle zuerst einen Charakter, bevor du eine Waffe auswählst",
+  "choose_picto": "Picto {num} wählen",
+  "choose_luminas": "Luminas wählen",
   "luminas_label": "Luminas",
-  "lumina_total": "Total",
-  "share": "Share",
-  "link_copied": "Link copied!",
-  "filter_placeholder": "Filter...",
-  "main_team": "Main team",
-  "secondary_team": "Secondary team",
-  "no_weapon": "No weapon",
-  "heading_home": "Welcome",
-  "index_desc1": "Browse the full list of pictos and mark those you own. Filter by region or effect to organize your collection and save your progress.",
-  "index_desc2": "Track your entire arsenal. Each weapon sheet shows who can wield it and the effects it grants so you never miss a piece of equipment.",
-  "index_desc3": "Customize your look by keeping track of all unlocked outfits.",
-  "login": "Login",
-  "logout": "Logout",
-  "index_desc4": "Build your team composition and share it with a link.",
+  "lumina_total": "Gesamt",
+  "share": "Teilen",
+  "link_copied": "Link kopiert!",
+  "filter_placeholder": "Filtern...",
+  "main_team": "Hauptteam",
+  "secondary_team": "Sekundärteam",
+  "no_weapon": "Keine Waffe",
+  "heading_home": "Willkommen",
+  "index_desc1": "Durchsuche die vollständige Liste der Pictos und markiere diejenigen, die du besitzt. Filtere nach Region oder Effekt, um deine Sammlung zu organisieren und deinen Fortschritt zu speichern.",
+  "index_desc2": "Verfolge dein gesamtes Arsenal. Jeder Waffenbogen zeigt, wer sie verwenden kann und welche Effekte sie gewährt, damit du kein Ausrüstungsteil verpasst.",
+  "index_desc3": "Gestalte dein Aussehen, indem du alle freigeschalteten Outfits im Blick behältst.",
+  "login": "Anmelden",
+  "logout": "Abmelden",
+  "index_desc4": "Stelle deine Teamzusammenstellung zusammen und teile sie per Link.",
   "nav_admin": "Admin",
   "heading_admin": "Administration",
-  "admin_characters": "Characters",
-  "admin_damage_buff_types": "Damage Buff Types",
-  "admin_damage_types": "Damage Types",
+  "admin_characters": "Charaktere",
+  "admin_damage_buff_types": "Schadensbonus-Typen",
+  "admin_damage_types": "Schadensarten",
   "admin_outfits": "Outfits",
   "admin_pictos": "Pictos",
-  "admin_weapons": "Weapons",
-  "admin_capacity_types": "Capacity Types",
-  "admin_capacities": "Capacities",
-  "config_capacities": "Configure capacities",
-  "edit": "Edit",
+  "admin_weapons": "Waffen",
+  "admin_capacity_types": "Fähigkeitstypen",
+  "admin_capacities": "Fähigkeiten",
+  "config_capacities": "Fähigkeiten konfigurieren",
+  "edit": "Bearbeiten",
   "show_labels": "i18n"
 }
