--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -35,57 +35,57 @@
   "clear_selection_confirm": "¿Borrar la selección visible?",
   "hidden": "ocultos",
   "pictos_title": "Clair Obscur - Pictos",
-  "nav_weapons": "Weapons inventory",
-  "nav_outfits": "Outfits inventory",
-  "heading_weapons": "Weapons inventory",
-  "heading_outfits": "Outfits inventory",
-  "damage_type": "Damage type",
-  "damage_buff": "Damage buff",
-  "damage_buff_type_1": "Vitality",
-  "damage_buff_type_2": "Strength",
-  "damage_buff_type_3": "Agility",
-  "damage_buff_type_4": "Defense",
-  "damage_buff_type_5": "Critical Chance",
-  "attributes": "Attributes",
-  "weapon_effect": "Effect",
-  "weapons_title": "Clair Obscur - Weapons",
-  "outfits_title": "Clair Obscur - Outfits",
-  "skins_label": "Skins:",
-  "haircuts_label": "Haircuts:",
-  "nav_build": "Team builder",
-  "heading_build": "Team builder",
-  "build_title": "Clair Obscur - Team builder",
-  "choose_character": "Choose character",
-  "choose_weapon": "Choose weapon",
-  "select_character_first": "Select a character before choosing a weapon",
-  "choose_picto": "Choose picto {num}",
-  "choose_luminas": "Choose luminas",
+  "nav_weapons": "Inventario de armas",
+  "nav_outfits": "Inventario de atuendos",
+  "heading_weapons": "Inventario de armas",
+  "heading_outfits": "Inventario de atuendos",
+  "damage_type": "Tipo de daño",
+  "damage_buff": "Bonificación de daño",
+  "damage_buff_type_1": "Vitalidad",
+  "damage_buff_type_2": "Fuerza",
+  "damage_buff_type_3": "Agilidad",
+  "damage_buff_type_4": "Defensa",
+  "damage_buff_type_5": "Probabilidad crítica",
+  "attributes": "Atributos",
+  "weapon_effect": "Efecto",
+  "weapons_title": "Clair Obscur - Armas",
+  "outfits_title": "Clair Obscur - Atuendos",
+  "skins_label": "Aspectos:",
+  "haircuts_label": "Peinados:",
+  "nav_build": "Creador de equipos",
+  "heading_build": "Creador de equipos",
+  "build_title": "Clair Obscur - Creador de equipos",
+  "choose_character": "Elegir personaje",
+  "choose_weapon": "Elegir arma",
+  "select_character_first": "Selecciona un personaje antes de elegir un arma",
+  "choose_picto": "Elegir picto {num}",
+  "choose_luminas": "Elegir luminas",
   "luminas_label": "Luminas",
   "lumina_total": "Total",
-  "share": "Share",
-  "link_copied": "Link copied!",
-  "filter_placeholder": "Filter...",
-  "main_team": "Main team",
-  "secondary_team": "Secondary team",
-  "no_weapon": "No weapon",
-  "heading_home": "Welcome",
-  "index_desc1": "Browse the full list of pictos and mark those you own. Filter by region or effect to organize your collection and save your progress.",
-  "index_desc2": "Track your entire arsenal. Each weapon sheet shows who can wield it and the effects it grants so you never miss a piece of equipment.",
-  "index_desc3": "Customize your look by keeping track of all unlocked outfits.",
-  "login": "Login",
-  "logout": "Logout",
-  "index_desc4": "Build your team composition and share it with a link.",
+  "share": "Compartir",
+  "link_copied": "¡Enlace copiado!",
+  "filter_placeholder": "Filtrar...",
+  "main_team": "Equipo principal",
+  "secondary_team": "Equipo secundario",
+  "no_weapon": "Sin arma",
+  "heading_home": "Bienvenido",
+  "index_desc1": "Explora la lista completa de pictos y marca los que poseas. Filtra por región o efecto para organizar tu colección y guardar tu progreso.",
+  "index_desc2": "Sigue todo tu arsenal. Cada ficha de arma muestra quién puede usarla y los efectos que otorga para que no pierdas ningún equipo.",
+  "index_desc3": "Personaliza tu apariencia llevando un registro de todos los atuendos desbloqueados.",
+  "login": "Iniciar sesión",
+  "logout": "Cerrar sesión",
+  "index_desc4": "Crea la composición de tu equipo y compártela con un enlace.",
   "nav_admin": "Admin",
   "heading_admin": "Administration",
-  "admin_characters": "Characters",
-  "admin_damage_buff_types": "Damage Buff Types",
-  "admin_damage_types": "Damage Types",
-  "admin_outfits": "Outfits",
+  "admin_characters": "Personajes",
+  "admin_damage_buff_types": "Tipos de mejora de daño",
+  "admin_damage_types": "Tipos de daño",
+  "admin_outfits": "Atuendos",
   "admin_pictos": "Pictos",
-  "admin_weapons": "Weapons",
-  "admin_capacity_types": "Capacity Types",
-  "admin_capacities": "Capacities",
-  "config_capacities": "Configure capacities",
-  "edit": "Edit",
+  "admin_weapons": "Armas",
+  "admin_capacity_types": "Tipos de capacidad",
+  "admin_capacities": "Capacidades",
+  "config_capacities": "Configurar capacidades",
+  "edit": "Editar",
   "show_labels": "i18n"
 }
