Update Italian and Portuguese translations

--- a/src/lang/it.json
+++ b/src/lang/it.json
@@ -1,91 +1,91 @@
 {
-  "site_title": "Clair Obscur Helper - Pictos inventory",
+  "site_title": "Clair Obscur Helper - Inventario dei pictos",
   "nav_brand": "Clair Obscur Helper",
-  "nav_pictos": "Pictos inventory",
-  "heading_pictos": "Pictos inventory",
-  "download": "Download",
-  "upload": "Upload",
-  "save": "Save",
-  "hide_owned": "Hide owned",
-  "hide_missing": "Hide missing",
-  "select_all": "Select all",
-  "clear_all": "Clear all",
-  "grid_view": "Grid view",
-  "table_view": "Table view",
-  "search_placeholder": "Search pictos by any field...",
-  "defense": "Defense",
-  "speed": "Speed",
-  "vitality": "Vitality",
-  "critical-luck": "Crit. Luck",
-  "luck": "Luck",
-  "health": "Health",
-  "name": "Name",
-  "region": "Region",
-  "level": "Level",
-  "bonus_lumina": "Lumina Bonus",
-  "unlock_description": "Unlock",
+  "nav_pictos": "Inventario dei pictos",
+  "heading_pictos": "Inventario dei pictos",
+  "download": "Scarica",
+  "upload": "Carica",
+  "save": "Salva",
+  "hide_owned": "Nascondi posseduti",
+  "hide_missing": "Nascondi mancanti",
+  "select_all": "Seleziona tutto",
+  "clear_all": "Cancella tutto",
+  "grid_view": "Vista griglia",
+  "table_view": "Vista tabella",
+  "search_placeholder": "Cerca pictos...",
+  "defense": "Difesa",
+  "speed": "Velocità",
+  "vitality": "Vitalità",
+  "critical-luck": "Prob. critica",
+  "luck": "Fortuna",
+  "health": "Salute",
+  "name": "Nome",
+  "region": "Regione",
+  "level": "Livello",
+  "bonus_lumina": "Bonus lumina",
+  "unlock_description": "Sblocco",
   "level_short": "Lv.",
-  "no_match_confirm": "No exact match for \"{entry}\". Use \"{picto}\"?",
-  "invalid_json": "Invalid JSON file",
-  "invalid_format": "Invalid format",
-  "pictos_added": "{count} pictos added.",
-  "save_confirm": "Save selection to this browser?",
-  "selection_saved": "Selection saved",
-  "select_all_confirm": "Select all visible pictos?",
-  "clear_selection_confirm": "Clear selection of visible pictos?",
-  "hidden": "hidden",
+  "no_match_confirm": "Nessuna corrispondenza esatta per \"{entry}\". Usare \"{picto}\"?",
+  "invalid_json": "File JSON non valido",
+  "invalid_format": "Formato non valido",
+  "pictos_added": "{count} pictos aggiunti.",
+  "save_confirm": "Salvare la selezione su questo browser?",
+  "selection_saved": "Selezione salvata",
+  "select_all_confirm": "Selezionare tutti i pictos visibili?",
+  "clear_selection_confirm": "Cancellare la selezione dei pictos visibili?",
+  "hidden": "nascosto",
   "pictos_title": "Clair Obscur - Pictos",
-  "nav_weapons": "Weapons inventory",
-  "nav_outfits": "Outfits inventory",
-  "heading_weapons": "Weapons inventory",
-  "heading_outfits": "Outfits inventory",
-  "damage_type": "Damage type",
-  "damage_buff": "Damage buff",
-  "damage_buff_type_1": "Vitality",
-  "damage_buff_type_2": "Strength",
-  "damage_buff_type_3": "Agility",
-  "damage_buff_type_4": "Defense",
-  "damage_buff_type_5": "Critical Chance",
-  "attributes": "Attributes",
-  "weapon_effect": "Effect",
-  "weapons_title": "Clair Obscur - Weapons",
-  "outfits_title": "Clair Obscur - Outfits",
-  "skins_label": "Skins:",
-  "haircuts_label": "Haircuts:",
-  "nav_build": "Team builder",
-  "heading_build": "Team builder",
-  "build_title": "Clair Obscur - Team builder",
-  "choose_character": "Choose character",
-  "choose_weapon": "Choose weapon",
-  "select_character_first": "Select a character before choosing a weapon",
-  "choose_picto": "Choose picto {num}",
-  "choose_luminas": "Choose luminas",
+  "nav_weapons": "Inventario armi",
+  "nav_outfits": "Inventario abiti",
+  "heading_weapons": "Inventario armi",
+  "heading_outfits": "Inventario abiti",
+  "damage_type": "Tipo di danno",
+  "damage_buff": "Bonus danno",
+  "damage_buff_type_1": "Vitalità",
+  "damage_buff_type_2": "Forza",
+  "damage_buff_type_3": "Agilità",
+  "damage_buff_type_4": "Difesa",
+  "damage_buff_type_5": "Possibilità critica",
+  "attributes": "Attributi",
+  "weapon_effect": "Effetto",
+  "weapons_title": "Clair Obscur - Armi",
+  "outfits_title": "Clair Obscur - Abiti",
+  "skins_label": "Skin:",
+  "haircuts_label": "Acconciature:",
+  "nav_build": "Costruttore di squadre",
+  "heading_build": "Costruttore di squadre",
+  "build_title": "Clair Obscur - Costruttore di squadre",
+  "choose_character": "Scegli personaggio",
+  "choose_weapon": "Scegli arma",
+  "select_character_first": "Seleziona un personaggio prima di scegliere un'arma",
+  "choose_picto": "Scegli picto {num}",
+  "choose_luminas": "Scegli i luminas",
   "luminas_label": "Luminas",
-  "lumina_total": "Total",
-  "share": "Share",
-  "link_copied": "Link copied!",
-  "filter_placeholder": "Filter...",
-  "main_team": "Main team",
-  "secondary_team": "Secondary team",
-  "no_weapon": "No weapon",
-  "heading_home": "Welcome",
-  "index_desc1": "Browse the full list of pictos and mark those you own. Filter by region or effect to organize your collection and save your progress.",
-  "index_desc2": "Track your entire arsenal. Each weapon sheet shows who can wield it and the effects it grants so you never miss a piece of equipment.",
-  "index_desc3": "Customize your look by keeping track of all unlocked outfits.",
-  "login": "Login",
-  "logout": "Logout",
-  "index_desc4": "Build your team composition and share it with a link.",
+  "lumina_total": "Totale",
+  "share": "Condividi",
+  "link_copied": "Link copiato!",
+  "filter_placeholder": "Filtra...",
+  "main_team": "Squadra principale",
+  "secondary_team": "Squadra secondaria",
+  "no_weapon": "Nessuna arma",
+  "heading_home": "Benvenuto",
+  "index_desc1": "Sfoglia l'elenco completo dei pictos e segna quelli che possiedi. Filtra per regione o effetto per organizzare la tua collezione e salvare i tuoi progressi.",
+  "index_desc2": "Tieni traccia di tutto il tuo arsenale. Ogni scheda arma mostra chi può usarla e gli effetti che concede così da non perdere alcun equipaggiamento.",
+  "index_desc3": "Personalizza il tuo aspetto tenendo traccia di tutti gli abiti sbloccati.",
+  "login": "Accedi",
+  "logout": "Disconnetti",
+  "index_desc4": "Crea la composizione della tua squadra e condividila tramite link.",
   "nav_admin": "Admin",
-  "heading_admin": "Administration",
-  "admin_characters": "Characters",
-  "admin_damage_buff_types": "Damage Buff Types",
-  "admin_damage_types": "Damage Types",
-  "admin_outfits": "Outfits",
+  "heading_admin": "Amministrazione",
+  "admin_characters": "Personaggi",
+  "admin_damage_buff_types": "Tipi bonus danno",
+  "admin_damage_types": "Tipi di danno",
+  "admin_outfits": "Abiti",
   "admin_pictos": "Pictos",
-  "admin_weapons": "Weapons",
-  "admin_capacity_types": "Capacity Types",
-  "admin_capacities": "Capacities",
-  "config_capacities": "Configure capacities",
-  "edit": "Edit",
+  "admin_weapons": "Armi",
+  "admin_capacity_types": "Tipi di capacità",
+  "admin_capacities": "Capacità",
+  "config_capacities": "Configura capacità",
+  "edit": "Modifica",
   "show_labels": "i18n"
 }
