--- a/src/lang/pt.json
+++ b/src/lang/pt.json
@@ -1,91 +1,91 @@
 {
-  "site_title": "Clair Obscur Helper - Pictos inventory",
+  "site_title": "Clair Obscur Helper - Inventário de pictos",
   "nav_brand": "Clair Obscur Helper",
-  "nav_pictos": "Pictos inventory",
-  "heading_pictos": "Pictos inventory",
-  "download": "Download",
-  "upload": "Upload",
-  "save": "Save",
-  "hide_owned": "Hide owned",
-  "hide_missing": "Hide missing",
-  "select_all": "Select all",
-  "clear_all": "Clear all",
-  "grid_view": "Grid view",
-  "table_view": "Table view",
-  "search_placeholder": "Search pictos by any field...",
-  "defense": "Defense",
-  "speed": "Speed",
-  "vitality": "Vitality",
-  "critical-luck": "Crit. Luck",
-  "luck": "Luck",
-  "health": "Health",
-  "name": "Name",
-  "region": "Region",
-  "level": "Level",
-  "bonus_lumina": "Lumina Bonus",
-  "unlock_description": "Unlock",
-  "level_short": "Lv.",
-  "no_match_confirm": "No exact match for \"{entry}\". Use \"{picto}\"?",
-  "invalid_json": "Invalid JSON file",
-  "invalid_format": "Invalid format",
-  "pictos_added": "{count} pictos added.",
-  "save_confirm": "Save selection to this browser?",
-  "selection_saved": "Selection saved",
-  "select_all_confirm": "Select all visible pictos?",
-  "clear_selection_confirm": "Clear selection of visible pictos?",
-  "hidden": "hidden",
+  "nav_pictos": "Inventário de pictos",
+  "heading_pictos": "Inventário de pictos",
+  "download": "Baixar",
+  "upload": "Carregar",
+  "save": "Salvar",
+  "hide_owned": "Ocultar possuídos",
+  "hide_missing": "Ocultar ausentes",
+  "select_all": "Selecionar tudo",
+  "clear_all": "Limpar tudo",
+  "grid_view": "Vista em grade",
+  "table_view": "Vista em tabela",
+  "search_placeholder": "Buscar pictos...",
+  "defense": "Defesa",
+  "speed": "Velocidade",
+  "vitality": "Vitalidade",
+  "critical-luck": "Chance crítica",
+  "luck": "Sorte",
+  "health": "Vida",
+  "name": "Nome",
+  "region": "Região",
+  "level": "Nível",
+  "bonus_lumina": "Bônus de lumina",
+  "unlock_description": "Desbloqueio",
+  "level_short": "Nv.",
+  "no_match_confirm": "Nenhuma correspondência exata para \"{entry}\". Usar \"{picto}\"?",
+  "invalid_json": "Arquivo JSON inválido",
+  "invalid_format": "Formato inválido",
+  "pictos_added": "{count} pictos adicionados.",
+  "save_confirm": "Salvar seleção neste navegador?",
+  "selection_saved": "Seleção salva",
+  "select_all_confirm": "Selecionar todos os pictos visíveis?",
+  "clear_selection_confirm": "Limpar seleção dos pictos visíveis?",
+  "hidden": "oculto",
   "pictos_title": "Clair Obscur - Pictos",
-  "nav_weapons": "Weapons inventory",
-  "nav_outfits": "Outfits inventory",
-  "heading_weapons": "Weapons inventory",
-  "heading_outfits": "Outfits inventory",
-  "damage_type": "Damage type",
-  "damage_buff": "Damage buff",
-  "damage_buff_type_1": "Vitality",
-  "damage_buff_type_2": "Strength",
-  "damage_buff_type_3": "Agility",
-  "damage_buff_type_4": "Defense",
-  "damage_buff_type_5": "Critical Chance",
-  "attributes": "Attributes",
-  "weapon_effect": "Effect",
-  "weapons_title": "Clair Obscur - Weapons",
-  "outfits_title": "Clair Obscur - Outfits",
+  "nav_weapons": "Inventário de armas",
+  "nav_outfits": "Inventário de trajes",
+  "heading_weapons": "Inventário de armas",
+  "heading_outfits": "Inventário de trajes",
+  "damage_type": "Tipo de dano",
+  "damage_buff": "Bônus de dano",
+  "damage_buff_type_1": "Vitalidade",
+  "damage_buff_type_2": "Força",
+  "damage_buff_type_3": "Agilidade",
+  "damage_buff_type_4": "Defesa",
+  "damage_buff_type_5": "Chance crítica",
+  "attributes": "Atributos",
+  "weapon_effect": "Efeito",
+  "weapons_title": "Clair Obscur - Armas",
+  "outfits_title": "Clair Obscur - Trajes",
   "skins_label": "Skins:",
-  "haircuts_label": "Haircuts:",
-  "nav_build": "Team builder",
-  "heading_build": "Team builder",
-  "build_title": "Clair Obscur - Team builder",
-  "choose_character": "Choose character",
-  "choose_weapon": "Choose weapon",
-  "select_character_first": "Select a character before choosing a weapon",
-  "choose_picto": "Choose picto {num}",
-  "choose_luminas": "Choose luminas",
+  "haircuts_label": "Cortes de cabelo:",
+  "nav_build": "Planejador de equipes",
+  "heading_build": "Planejador de equipes",
+  "build_title": "Clair Obscur - Planejador de equipes",
+  "choose_character": "Escolha o personagem",
+  "choose_weapon": "Escolha a arma",
+  "select_character_first": "Selecione um personagem antes de escolher uma arma",
+  "choose_picto": "Escolha o picto {num}",
+  "choose_luminas": "Escolha os luminas",
   "luminas_label": "Luminas",
   "lumina_total": "Total",
-  "share": "Share",
-  "link_copied": "Link copied!",
-  "filter_placeholder": "Filter...",
-  "main_team": "Main team",
-  "secondary_team": "Secondary team",
-  "no_weapon": "No weapon",
-  "heading_home": "Welcome",
-  "index_desc1": "Browse the full list of pictos and mark those you own. Filter by region or effect to organize your collection and save your progress.",
-  "index_desc2": "Track your entire arsenal. Each weapon sheet shows who can wield it and the effects it grants so you never miss a piece of equipment.",
-  "index_desc3": "Customize your look by keeping track of all unlocked outfits.",
-  "login": "Login",
-  "logout": "Logout",
-  "index_desc4": "Build your team composition and share it with a link.",
+  "share": "Compartilhar",
+  "link_copied": "Link copiado!",
+  "filter_placeholder": "Filtrar...",
+  "main_team": "Equipe principal",
+  "secondary_team": "Equipe secundária",
+  "no_weapon": "Sem arma",
+  "heading_home": "Bem-vindo",
+  "index_desc1": "Percorra a lista completa de pictos e marque os que você possui. Filtre por região ou efeito para organizar sua coleção e salvar seu progresso.",
+  "index_desc2": "Acompanhe todo o seu arsenal. Cada ficha de arma mostra quem pode usá-la e os efeitos que concede para que você não perca nenhum equipamento.",
+  "index_desc3": "Personalize sua aparência acompanhando todos os trajes desbloqueados.",
+  "login": "Entrar",
+  "logout": "Sair",
+  "index_desc4": "Monte a composição da sua equipe e compartilhe com um link.",
   "nav_admin": "Admin",
-  "heading_admin": "Administration",
-  "admin_characters": "Characters",
-  "admin_damage_buff_types": "Damage Buff Types",
-  "admin_damage_types": "Damage Types",
-  "admin_outfits": "Outfits",
+  "heading_admin": "Administração",
+  "admin_characters": "Personagens",
+  "admin_damage_buff_types": "Tipos de bônus de dano",
+  "admin_damage_types": "Tipos de dano",
+  "admin_outfits": "Trajes",
   "admin_pictos": "Pictos",
-  "admin_weapons": "Weapons",
-  "admin_capacity_types": "Capacity Types",
-  "admin_capacities": "Capacities",
-  "config_capacities": "Configure capacities",
-  "edit": "Edit",
+  "admin_weapons": "Armas",
+  "admin_capacity_types": "Tipos de capacidade",
+  "admin_capacities": "Capacidades",
+  "config_capacities": "Configurar capacidades",
+  "edit": "Editar",
   "show_labels": "i18n"
 }
