--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -13,6 +13,8 @@
   "grid_view": "Rasteransicht",
   "table_view": "Tabellenansicht",
   "search_placeholder": "Pictos durchsuchen...",
+  "search_weapons_placeholder": "Search weapons...",
+  "search_outfits_placeholder": "Search outfits...",
   "defense": "Verteidigung",
   "speed": "Geschwindigkeit",
   "vitality": "Vitalität",
@@ -87,5 +89,11 @@
   "admin_capacities": "Fähigkeiten",
   "config_capacities": "Fähigkeiten konfigurieren",
   "edit": "Bearbeiten",
-  "show_labels": "i18n"
+  "show_labels": "i18n",
+  "my_builds": "My builds",
+  "search_builds": "Search builds",
+  "build_title_col": "Title",
+  "build_desc_col": "Description",
+  "build_author_col": "Author",
+  "build_updated_col": "Updated"
 }
