--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -13,6 +13,8 @@
   "grid_view": "Grid view",
   "table_view": "Table view",
   "search_placeholder": "Search pictos by any field...",
+  "search_weapons_placeholder": "Search weapons...",
+  "search_outfits_placeholder": "Search outfits...",
   "defense": "Defense",
   "speed": "Speed",
   "vitality": "Vitality",
@@ -87,5 +89,11 @@
   "admin_capacities": "Capacities",
   "config_capacities": "Configure capacities",
   "edit": "Edit",
-  "show_labels": "i18n"
+  "show_labels": "i18n",
+  "my_builds": "My builds",
+  "search_builds": "Search builds",
+  "build_title_col": "Title",
+  "build_desc_col": "Description",
+  "build_author_col": "Author",
+  "build_updated_col": "Updated"
 }
