--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -13,6 +13,8 @@
   "grid_view": "Vue grille",
   "table_view": "Vue tableau",
   "search_placeholder": "Rechercher un picto...",
+  "search_weapons_placeholder": "Rechercher une arme...",
+  "search_outfits_placeholder": "Rechercher une tenue...",
   "defense": "Défense",
   "speed": "Vitesse",
   "vitality": "Vitalité",
@@ -87,5 +89,11 @@
   "admin_capacities": "Capacités",
   "config_capacities": "Configurer les capacités",
   "edit": "Éditer",
-  "show_labels": "i18n"
+  "show_labels": "i18n",
+  "my_builds": "Mes builds",
+  "search_builds": "Rechercher des builds",
+  "build_title_col": "Titre",
+  "build_desc_col": "Description",
+  "build_author_col": "Auteur",
+  "build_updated_col": "Mise à jour"
 }
