--- a/src/lang/it.json
+++ b/src/lang/it.json
@@ -13,6 +13,8 @@
   "grid_view": "Vista griglia",
   "table_view": "Vista tabella",
   "search_placeholder": "Cerca pictos...",
+  "search_weapons_placeholder": "Cerca armi...",
+  "search_outfits_placeholder": "Cerca outfit...",
   "defense": "Difesa",
   "speed": "Velocità",
   "vitality": "Vitalità",
@@ -87,5 +89,11 @@
   "admin_capacities": "Capacità",
   "config_capacities": "Configura capacità",
   "edit": "Modifica",
-  "show_labels": "i18n"
+  "show_labels": "i18n",
+  "my_builds": "My builds",
+  "search_builds": "Search builds",
+  "build_title_col": "Title",
+  "build_desc_col": "Description",
+  "build_author_col": "Author",
+  "build_updated_col": "Updated"
 }
