Add clear build button

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -66,6 +66,7 @@
   "lumina_total": "Gesamt",
   "share": "Teilen",
   "link_copied": "Link kopiert!",
+  "clear_build": "Build zurücksetzen",
   "filter_placeholder": "Filtern...",
   "main_team": "Hauptteam",
   "secondary_team": "Sekundärteam",
