--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -66,6 +66,7 @@
   "lumina_total": "Total",
   "share": "Share",
   "link_copied": "Link copied!",
+  "clear_build": "Clear build",
   "filter_placeholder": "Filter...",
   "main_team": "Main team",
   "secondary_team": "Secondary team",
