--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -66,6 +66,7 @@
   "lumina_total": "Total",
   "share": "Compartir",
   "link_copied": "¡Enlace copiado!",
+  "clear_build": "Limpiar build",
   "filter_placeholder": "Filtrar...",
   "main_team": "Equipo principal",
   "secondary_team": "Equipo secundario",
