--- a/src/lang/pt.json
+++ b/src/lang/pt.json
@@ -66,6 +66,7 @@
   "lumina_total": "Total",
   "share": "Compartilhar",
   "link_copied": "Link copiado!",
+  "clear_build": "Limpar build",
   "filter_placeholder": "Filtrar...",
   "main_team": "Equipe principal",
   "secondary_team": "Equipe secundária",
