--- a/src/lang/pl.json
+++ b/src/lang/pl.json
@@ -66,6 +66,7 @@
   "lumina_total": "Całkowity",
   "share": "Udział",
   "link_copied": "Link skopiowany!",
+  "clear_build": "Wyczyść build",
   "filter_placeholder": "Filtr...",
   "main_team": "Główny zespół",
   "secondary_team": "Drużyna drugorzędna",
