Add edit mode to team builder

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -67,6 +67,8 @@
   "share": "Teilen",
   "link_copied": "Link kopiert!",
   "clear_build": "Build zurücksetzen",
+  "edit_mode": "Editiermodus",
+  "enable_edit_mode": "Editiermodus aktivieren",
   "filter_placeholder": "Filtern...",
   "main_team": "Hauptteam",
   "secondary_team": "Sekundärteam",
