--- a/src/lang/pl.json
+++ b/src/lang/pl.json
@@ -67,6 +67,8 @@
   "share": "Udział",
   "link_copied": "Link skopiowany!",
   "clear_build": "Wyczyść build",
+  "edit_mode": "Tryb edycji",
+  "enable_edit_mode": "Włącz tryb edycji",
   "filter_placeholder": "Filtr...",
   "main_team": "Główny zespół",
   "secondary_team": "Drużyna drugorzędna",
