--- a/src/lang/pt.json
+++ b/src/lang/pt.json
@@ -67,6 +67,8 @@
   "share": "Compartilhar",
   "link_copied": "Link copiado!",
   "clear_build": "Limpar build",
+  "edit_mode": "Modo de edição",
+  "enable_edit_mode": "Ative o modo de edição",
   "filter_placeholder": "Filtrar...",
   "main_team": "Equipe principal",
   "secondary_team": "Equipe secundária",
