--- a/src/lang/it.json
+++ b/src/lang/it.json
@@ -67,6 +67,8 @@
   "share": "Condividi",
   "link_copied": "Link copiato!",
   "clear_build": "Pulisci build",
+  "edit_mode": "Modalità modifica",
+  "enable_edit_mode": "Attiva modalità modifica",
   "filter_placeholder": "Filtra...",
   "main_team": "Squadra principale",
   "secondary_team": "Squadra secondaria",
