Refine build view and lumina modal

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -66,6 +66,9 @@
   "lumina_total": "Gesamt",
   "share": "Teilen",
   "link_copied": "Link kopiert!",
+  "clear_build": "Build zurücksetzen",
+  "edit_mode": "Editiermodus",
+  "enable_edit_mode": "Editiermodus aktivieren",
   "filter_placeholder": "Filtern...",
   "main_team": "Hauptteam",
   "secondary_team": "Sekundärteam",
