--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -66,6 +66,9 @@
   "lumina_total": "Total",
   "share": "Share",
   "link_copied": "Link copied!",
+  "clear_build": "Clear build",
+  "edit_mode": "Edit mode",
+  "enable_edit_mode": "Enable edit mode first",
   "filter_placeholder": "Filter...",
   "main_team": "Main team",
   "secondary_team": "Secondary team",
