--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -53,6 +53,9 @@
   "lumina_total": "Total",
   "share": "Partager",
   "link_copied": "Lien copié !",
+  "clear_build": "Effacer le build",
+  "edit_mode": "Mode édition",
+  "enable_edit_mode": "Activez le mode édition",
   "filter_placeholder": "Filtrer...",
   "main_team": "Équipe principale",
   "secondary_team": "Équipe secondaire",
