--- a/src/lang/it.json
+++ b/src/lang/it.json
@@ -66,6 +66,9 @@
   "lumina_total": "Totale",
   "share": "Condividi",
   "link_copied": "Link copiato!",
+  "clear_build": "Pulisci build",
+  "edit_mode": "Modalità modifica",
+  "enable_edit_mode": "Attiva modalità modifica",
   "filter_placeholder": "Filtra...",
   "main_team": "Squadra principale",
   "secondary_team": "Squadra secondaria",
