--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -66,6 +66,9 @@
   "lumina_total": "Total",
   "share": "Compartir",
   "link_copied": "¡Enlace copiado!",
+  "clear_build": "Limpiar build",
+  "edit_mode": "Modo edición",
+  "enable_edit_mode": "Active el modo edición",
   "filter_placeholder": "Filtrar...",
   "main_team": "Equipo principal",
   "secondary_team": "Equipo secundario",
