Improve suggestion form UI and dropdown

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -108,6 +108,9 @@
   "suggestion_title": "Title",
   "suggestion_description": "Description",
   "suggestion_type": "Type",
+  "suggestion_type_bug": "Bug",
+  "suggestion_type_improvement": "Improvement",
+  "suggestion_type_other": "Other",
   "suggestion_send": "Send",
   "suggestion_sent": "Suggestion sent",
   "suggestion_failed": "Failed to send suggestion",
