--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -108,6 +108,9 @@
   "suggestion_title": "Titre",
   "suggestion_description": "Description",
   "suggestion_type": "Type",
+  "suggestion_type_bug": "Bug",
+  "suggestion_type_improvement": "Amélioration",
+  "suggestion_type_other": "Autres",
   "suggestion_send": "Envoyer",
   "suggestion_sent": "Suggestion envoyee",
   "suggestion_failed": "Erreur lors de l'envoi",
